<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EM" Id="{bd4495f9-9eb4-47bc-acc2-39c92a212c06}">
    <Declaration><![CDATA[// Base structure em
TYPE ST_EM :
STRUCT
	Config : ST_CONFIG;
	Cmd : E_CMD;
	Status : E_Status;
	SequenceStep : INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>